@@ -789,6 +789,11 @@ asciidoc.install(2);
 <div class="ulist"><ul>
 <li>
 <p>
+use shift in Bernstein hash instead of multiply (thanks, Jimmy Zhuo!)
+</p>
+</li>
+<li>
+<p>
 switch ssize_t types in utarray/utstring to size_t (thanks, Hong Xu!)
 </p>
 </li>
@@ -1532,7 +1537,7 @@ Initial release
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-07-04 09:48:31 EDT
+Last updated 2014-07-05 08:13:14 EDT
 </div>
 </div>
 </body>
