@@ -3026,7 +3026,7 @@ condition
 <div id="footer">
 <div id="footer-text">
 Version 1.9.9<br />
-Last updated 2014-02-25 21:47:51 EST
+Last updated 2014-06-26 08:25:37 EDT
 </div>
 </div>
 </body>
