@@ -96,6 +96,11 @@ debug:     makes the tests with debugging symbols and no optimization
 example:   builds the 'example' program from the user guide
 ================================================================================
 
+Testing a specific hash function
+--------------------------------
+Set EXTRA_CFLAGS with this Makefile to use a specific hash function:
+   EXTRA_CFLAGS=-DHASH_FUNCTION=HASH_BER make
+
 Other files
 ================================================================================
 keystats:  key statistics analyzer. See the User Guide (http://uthash.sf.net)
